добавил инструкцию по игнору файла

--- a/# подсказки в командной строке.md
+++ b/# подсказки в командной строке.md
@@ -24,3 +24,9 @@ linyx
 ```sh
 rm <file name>
 ```
+
+чтобы игнорировать какие либо файлы, создаем папку
+```sh
+.gitignor
+```
+ и записываем туда файлы которые нужно игнорировать
