продолжил делать задание с урока заполением нужных для гита команд

--- a/задание на уроке.md
+++ b/задание на уроке.md
@@ -14,3 +14,16 @@ git lod
 ```sh
 #
 ```
+
+# Когда мы переключаемся по сейвам(коммитам/бэкапам) у нас папка перемещается в то состояние в котором она была на конкретном сейве, то есть если на конкретном сейве не было каких то файлов, то они удалятся
+```sh
+checkout <пишем первые 4-7 символов сейва>
+```
+# так же для того чтобы вернуться в последний сейв на котором мы работали пишем команду
+```sh
+checkout main
+```
+# так же, если у нас много комитов и появляется писок сейвов с (END) в конце, то просто жмякаем
+```sh
+q
+```
