дополнение инструкции по мд

--- a/инстукция по маркдауну.md
+++ b/инстукция по маркдауну.md
@@ -5,3 +5,21 @@
 обычный текст набираем как есть.
 
 Новая строка.
+
+**Полужирный текст**
+
+*курсив*
+
+## Цитирование на языке MarkDown
+> первый уровень
+>> второй уровень
+>>> и т.д
+
+## Списки
+### Ненумерованные список
+* лист
+* лист
+
+### Нумеррованный список
+1. Лист
+2. Лист
