добавление как вставлять ссылку а текст

--- a/# подсказки в командной строке.md
+++ b/# подсказки в командной строке.md
@@ -30,3 +30,8 @@ rm <file name>
 .gitignor
 ```
  и записываем туда файлы которые нужно игнорировать
+
+ команда которая показывает различия между изменениями (можно проверить, делали мы сейв или нет, а так же покажет конкретно какие изменения были совершены)
+ ```sh
+ diff
+ ```
