пополнение подсказок для терминала комндой diff

--- a/# подсказки в командной строке.md
+++ b/# подсказки в командной строке.md
@@ -29,9 +29,9 @@ rm <file name>
 ```sh
 .gitignor
 ```
- и записываем туда файлы которые нужно игнорировать
+и записываем туда файлы которые нужно игнорировать
 
- команда которая показывает различия между изменениями (можно проверить, делали мы сейв или нет, а так же покажет конкретно какие изменения были совершены)
- ```sh
- diff
- ```
+команда которая показывает различия между изменениями (можно проверить, делали мы сейв или нет, а так же покажет конкретно какие изменения были совершены)
+```sh
+git diff
+```
