добавили картинку аниме тян

--- a/инстукция по маркдауну.md
+++ b/инстукция по маркдауну.md
@@ -27,4 +27,10 @@
 ## WEB ссылки
 Текст [пример сылки](http.example.com "Всплывающая подсказка")
 
-# Добавим как добавлять картинки в MarkDown
+# Добавим как добавлять картинки в MarkDown 
+![аниме тян](дискорд.jpg) 
+берем и пишем 
+```sh
+"![пишем всплывающую подсказку](пишем путь по которому лежит картинка)"
+```
+если картинка лежит в нашей папке, то можно просто указать название файла вместе с расширением
