добавил текста для самостоятельной работы

--- a/# подсказки в командной строке.md
+++ b/# подсказки в командной строке.md
@@ -52,3 +52,14 @@ git branch
 ```sh
 git branch <имя новой ветки>
 ```
+
+удаление ветки
+```sh
+git branch -d <имя ветки которую нужно удалить>
+```
+
+некоторый текст для С/Р
+
+другой текст
+
+третий текст
