дополняю старый файл командами о связи с удалённым репозиторием

--- a/# подсказки в командной строке.md
+++ b/# подсказки в командной строке.md
@@ -63,3 +63,32 @@ git branch -d <имя ветки которую нужно удалить>
 другой текст
 
 третий текст 321
+
+
+
+
+
+# промежутка
+## команды для объединения файлов с github
+дбавление на сайт
+```sh
+git push -u origin main
+```
+загрузка с сайта
+```sh
+git pull 
+```
+
+## когда создаем репозиторий на сайте нам необходимо вписать к нам в гит локальный ссылку на репозиторий который создали в github 
+делается это командой 
+```sh
+git remote add origin https://github.com/Drowning8659/-.git
+
+где '-.git' название репозитория с сайта 
+```
+
+так же чтобы начать работу гита в новом репозитории необходимо прописать
+```sh
+git init
+```
+чтобы начать работу гита, а так же нужно сделать первый комит чтобы всё сохранилось
