--- a/# подсказки в командной строке.md
+++ b/# подсказки в командной строке.md
@@ -92,3 +92,11 @@ git remote add origin https://github.com/Drowning8659/-.git
 git init
 ```
 чтобы начать работу гита, а так же нужно сделать первый комит чтобы всё сохранилось
+
+когда мы создаем несколько веток и добавляем их у удалённый репозиторий, все наши ветки будут отображаться там
+
+чтобы удалить ненужную ветку в удалённом репозитории в тот момент когда мы хотим туда сохранить то что сделали, пишем команду
+```sh
+git push origin main --delete "имя нашей ветки"
+```
+
