дополнение команд из браузера

--- a/# подсказки в командной строке.md
+++ b/# подсказки в командной строке.md
@@ -100,3 +100,9 @@ git init
 git push origin main --delete "имя нашей ветки"
 ```
 
+чтобы не было конфликтов между удаленным и локальным репозиторием, нужно перед тем как загружать, скачать те изменения с удаленного репозитория которые там есть, и потом загружать
+
+если всё же произошёл такой конфликт при загрузке на удалённый репозиторий, то при загрузке повторно, пишем команду
+```sh
+git pull --rebase
+```
