команды для разрешения конфликтов

--- a/# подсказки в командной строке.md
+++ b/# подсказки в командной строке.md
@@ -106,3 +106,16 @@ git push origin main --delete "имя нашей ветки"
 ```sh
 git pull --rebase
 ```
+
+если всё же ругается что есть конфликт, в ручную редактируем изменения и сохраняем то что нам нужно
+далее сохраняем и заново выгружаем
+
+
+
+так же может быть конфликт и в другую сторону, что гит будет ругаться на то что сохранение с браузера не соответствует с файлами локальными
+делаем всё тоже самое, изменяем в ручную и можно продолжить команду --rebase
+а именно 
+```sh
+git rebase --continue
+```
+в общем чтобы избавляться от таких конфликтов при работе в комнде, нужно по чаще загружать наш локальный репозиторий в github
